# NextStop-hidden-web-scrapper

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routes/: best_time.py  food.py  places_to_visit.py  upcomingMonths.py  upcomingPlaces.py
app/services/: get_food_by_place.py  get_places_by_country_name.py  get_places_by_place_name.py  get_places_by_state_name.py  location_of_places.py
