[tool.poetry]
name = "nextstop-web-scrapper"
version = "0.1.0"
description = ""
authors = ["Zeref101 <shreyas.mohanty03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
